# rust-wallet

./: Cargo.toml  spec.md
src/: lib.rs  tezos.rs  wallet.rs
